autobuilder (6.18) unstable; urgency=low

  * Rename type Spec -> RetrieveMethod
  * Improve package pipeline.

 -- David Fox <dsf@seereason.com>  Sat, 25 Feb 2012 06:25:09 -0800

autobuilder (6.17) unstable; urgency=low

  * Add a --hackage-server, and update HTMl parser so we can use either
    hackage.haskell.org or hackage.factisresearch.com.

 -- David Fox <dsf@seereason.com>  Sat, 18 Feb 2012 21:35:57 -0800

autobuilder (6.16.1) unstable; urgency=low

  * Changes for tar 0.4.

 -- David Fox <dsf@seereason.com>  Tue, 14 Feb 2012 07:16:18 -0800

autobuilder (6.16) unstable; urgency=low

  * Fix a bug in the code that runs dpkg-source --commit where it used
    doesFileExist instead of doesDirectory exist.  Also handle the case
    where the debian/patches directory already exists, but we have local
    changes too.  There is probably a remaining bug when the package
    includes a debian/patches/autobuilder.diff file.

 -- David Fox <dsf@seereason.com>  Fri, 10 Feb 2012 09:28:36 -0800

autobuilder (6.15) unstable; urgency=low

  * Maintain a map from cabal package names to debian epoch numbers so we
    can create correct debian version numbers in both the changelog for
    the package being built and for the version numbers of dependencies.

 -- David Fox <dsf@seereason.com>  Thu, 09 Feb 2012 07:29:54 -0800

autobuilder (6.14) unstable; urgency=low

  * Add an ExtraDevDep entry to the Param record, pass a --dev-dep flag to
    cabal-debian when we see this parameter.
  * Add a MapDep entry to the Param record, pass a --map-dep flag to
    cabal-debian when we see it.

 -- David Fox <dsf@seereason.com>  Mon, 23 Jan 2012 05:22:57 -0800

autobuilder (6.13) unstable; urgency=low

  * Rename the type Package -> Packages and make it a Monoid, adding
    NoPackage and Packages (Set.Set Packages) construcors.

 -- David Fox <dsf@seereason.com>  Wed, 11 Jan 2012 09:22:45 -0800

autobuilder (6.12) unstable; urgency=low
