@@ -11,12 +11,14 @@ import Control.Monad (when)
 import Control.Monad.Trans (liftIO)
 -- import qualified Data.ByteString.Lazy as B
 import qualified Data.ByteString.Lazy.Char8 as B
-import Data.List (isPrefixOf, isSuffixOf, intercalate)
+import Data.List (isPrefixOf, isSuffixOf, intercalate, nub, sort)
+import Data.Maybe (catMaybes)
+import Data.Version (Version, showVersion)
 import Debian.AutoBuilder.BuildTarget.Common
 import qualified Debian.AutoBuilder.Types.PackageFlag as P
 import qualified Debian.AutoBuilder.Types.CacheRec as P
 import qualified Debian.AutoBuilder.Types.ParamRec as P
-import Debian.Version (DebianVersion, parseDebianVersion, prettyDebianVersion)
+import Debian.Version (parseDebianVersion)
 import Debian.Repo hiding (getVersion)
 import System.Directory (doesFileExist, createDirectoryIfMissing)
 import System.Exit
@@ -30,10 +32,10 @@ import Text.XML.HaXml.Types
 import Text.XML.HaXml.Html.Parse (htmlParse)
 import Text.XML.HaXml.Posn
 
-data Debianize = Debianize String (Maybe DebianVersion) SourceTree
+data Debianize = Debianize String (Maybe Version) SourceTree
 
 instance Show Debianize where
-    show (Debianize name version _) = "debianize:" ++ name ++ maybe "" (("=" ++) . show . prettyDebianVersion) version
+    show (Debianize name version _) = "debianize:" ++ name ++ maybe "" (("=" ++) . showVersion) version
 
 documentation = [ "debianize:<name> or debianize:<name>=<version> - a target of this form"
                 , "(currently) retrieves source code from http://hackage.haskell.org and runs"
@@ -42,19 +44,26 @@ documentation = [ "debianize:<name> or debianize:<name>=<version> - a target of 
 instance BuildTarget Debianize where
     getTop _ (Debianize _ _ tree) = topdir tree
     revision _ (Debianize name (Just version) _) =
-        return $ "debianize:" ++ name ++ "=" ++ show (prettyDebianVersion version)
+        return $ "debianize:" ++ name ++ "=" ++ showVersion version
     revision _ (Debianize _ Nothing _) =
         fail "Attempt to generate revision string for unversioned hackage target"
     logText (Debianize _ _ _) revision =
         "Built from hackage, revision: " ++ either show id revision
-    mVersion (Debianize _ v _) = v
+    mVersion (Debianize _ v _) = fmap (parseDebianVersion . showVersion) v
 
-prepare :: P.CacheRec -> [P.PackageFlag] -> String -> Maybe String -> AptIOT IO Debianize
-prepare cache flags name version = liftIO $
-    do (version' :: DebianVersion) <- maybe (getVersion (P.hackageServer (P.params cache)) name) (return . parseDebianVersion) version
+prepare :: P.CacheRec -> [P.PackageFlag] -> String -> [P.CabalFlag] -> AptIOT IO Debianize
+prepare cache flags name cabalFlags = liftIO $
+    do (version' :: Version) <- maybe (getVersion (P.hackageServer (P.params cache)) name) (return . read) versionString
        when (P.flushSource (P.params cache)) (removeRecursiveSafely (tarball (P.topDir cache) name version'))
        downloadAndDebianize cache flags name version'
        findSourceTree (unpacked (P.topDir cache) name version') >>= return . Debianize name (Just version')
+    where
+      versionString = case nub (sort (catMaybes (map (\ flag -> case flag of
+                                                                  P.CabalPin s -> Just s
+                                                                  {- _ -> Nothing -}) cabalFlags))) of
+                        [] -> Nothing
+                        [v] -> Just v
+                        vs -> error ("Conflicting cabal version numbers passed to Debianize: [" ++ intercalate ", " vs ++ "]")
 
 parse cmd output =
     case collectOutputUnpacked output of
@@ -65,7 +74,7 @@ parse cmd output =
 -- hackage temporary directory:
 -- > download \"/home/dsf/.autobuilder/hackage\" -> \"/home/dsf/.autobuilder/hackage/happstack-server-6.1.4.tar.gz\"
 -- After the download it tries to untar the file, and then it saves the compressed tarball.
-downloadAndDebianize :: P.CacheRec -> [P.PackageFlag] -> String -> DebianVersion -> IO ()
+downloadAndDebianize :: P.CacheRec -> [P.PackageFlag] -> String -> Version -> IO ()
 downloadAndDebianize cache flags name version =
     removeRecursiveSafely (unpacked (P.topDir cache) name version) >>
     downloadCached (P.hackageServer (P.params cache)) (P.topDir cache) name version >>=
@@ -74,7 +83,7 @@ downloadAndDebianize cache flags name version =
     debianize cache flags (unpacked (P.topDir cache) name version)
 
 -- |Scan the flag list for Patch flag, and apply the patches
-patch :: FilePath -> [P.PackageFlag] -> String -> DebianVersion -> IO ()
+patch :: FilePath -> [P.PackageFlag] -> String -> Version -> IO ()
 patch top flags name version =
     mapM_ patch' flags
     where
@@ -95,7 +104,7 @@ unpack top text = Tar.unpack (tmpDir top) (Tar.read (Z.decompress text))
 -- |Download and unpack the given package version to the autobuilder's
 -- hackage temporary directory.  After the download it validates the
 -- tarball text and saves the compressed tarball.
-downloadCached :: String -> FilePath -> String -> DebianVersion -> IO B.ByteString
+downloadCached :: String -> FilePath -> String -> Version -> IO B.ByteString
 downloadCached server top name version =
     do exists <- doesFileExist (tarball top name version)
        case exists of
@@ -105,7 +114,7 @@ downloadCached server top name version =
          False -> download' server top name version
     
 -- |Download and save the tarball, return its contents.
-download' :: String -> FilePath -> String -> DebianVersion -> IO B.ByteString
+download' :: String -> FilePath -> String -> Version -> IO B.ByteString
 download' server top name version =
     do (out, err, res) <- lazyCommandE (downloadCommand server name version) B.empty >>= return . collectOutput
        case res of
@@ -153,9 +162,9 @@ debianize cache flags dir =
 
 -- |Given a package name, get the newest version in hackage of the hackage package with that name:
 -- > getVersion \"binary\" -> \"0.5.0.2\"
-getVersion :: String -> String -> IO DebianVersion
+getVersion :: String -> String -> IO Version
 getVersion server name =
-    lazyCommandE cmd B.empty >>= return . parseDebianVersion . findVersion name . parse cmd
+    lazyCommandE cmd B.empty >>= return . read . findVersion name . parse cmd
     where cmd = curlCmd (packageURL server name)
           curlCmd url = "curl -s '" ++ url ++ "'"
 
@@ -183,7 +192,7 @@ findVersion package (Document _ _ (Elem _name _attrs content) _) =
 
 -- |Hackage paths
 packageURL server name = "http://" ++ server ++ "/package/" ++ name
-versionURL server name version = "http://" ++ server ++ "/packages/archive/" ++ name ++ "/" ++ show (prettyDebianVersion version) ++ "/" ++ name ++ "-" ++ show (prettyDebianVersion version) ++ ".tar.gz"
+versionURL server name version = "http://" ++ server ++ "/packages/archive/" ++ name ++ "/" ++ show (showVersion version) ++ "/" ++ name ++ "-" ++ show (showVersion version) ++ ".tar.gz"
 
 -- |Validate the text of a tarball file.
 validate :: B.ByteString -> Maybe B.ByteString
@@ -193,24 +202,24 @@ validate text =
       Left _ -> Nothing
       Right _ -> Just text
 
-tarball :: FilePath -> String -> DebianVersion -> FilePath
-tarball top name version  = tmpDir top </> name ++ "-" ++ show (prettyDebianVersion version) ++ ".tar.gz"
+tarball :: FilePath -> String -> Version -> FilePath
+tarball top name version  = tmpDir top </> name ++ "-" ++ showVersion version ++ ".tar.gz"
 
-unpacked :: FilePath -> String -> DebianVersion -> FilePath
-unpacked top name version = tmpDir top </> name ++ "-" ++ show (prettyDebianVersion version)
+unpacked :: FilePath -> String -> Version -> FilePath
+unpacked top name version = tmpDir top </> name ++ "-" ++ showVersion version
 
 tmpDir :: FilePath -> FilePath
 tmpDir top = top ++ "/hackage"
 
-downloadCommand :: String -> String -> DebianVersion -> String
+downloadCommand :: String -> String -> Version -> String
 downloadCommand server name version = "curl -s '" ++ versionURL server name version ++ "'" {- ++ " > '" ++ destPath top name version ++ "'" -}
 
 -- Hackage target
 
-data Hackage = Hackage String (Maybe DebianVersion) SourceTree
+data Hackage = Hackage String (Maybe Version) SourceTree
 
 instance Show Hackage where
-    show (Hackage name version _) = "hackage:" ++ name ++ maybe "" (("=" ++) . show . prettyDebianVersion) version
+    show (Hackage name version _) = "hackage:" ++ name ++ maybe "" (("=" ++) . showVersion) version
 
 documentationHackage = [ "hackage:<name> or hackage:<name>=<version> - a target of this form"
                 , "retrieves source code from http://hackage.haskell.org." ]
@@ -218,16 +227,23 @@ documentationHackage = [ "hackage:<name> or hackage:<name>=<version> - a target 
 instance BuildTarget Hackage where
     getTop _ (Hackage _ _ tree) = topdir tree
     revision _ (Hackage name (Just version) _) =
-        return $ "hackage:" ++ name ++ "=" ++ show (prettyDebianVersion version)
+        return $ "hackage:" ++ name ++ "=" ++ showVersion version
     revision _ (Hackage _ Nothing _) =
         fail "Attempt to generate revision string for unversioned hackage target"
     logText (Hackage _ _ _) revision =
         "Built from hackage, revision: " ++ either show id revision
-    mVersion (Hackage _ v _) = v
+    mVersion (Hackage _ v _) = fmap (parseDebianVersion . showVersion) v
 
-prepareHackage :: P.CacheRec -> String -> Maybe String -> AptIOT IO Hackage
-prepareHackage cache name version = liftIO $
-    do (version' :: DebianVersion) <- maybe (getVersion (P.hackageServer (P.params cache)) name) (return . parseDebianVersion) version
+prepareHackage :: P.CacheRec -> String -> [P.CabalFlag] -> AptIOT IO Hackage
+prepareHackage cache name cabalFlags = liftIO $
+    do (version' :: Version) <- maybe (getVersion (P.hackageServer (P.params cache)) name) (return . read) versionString
        when (P.flushSource (P.params cache)) (mapM_ removeRecursiveSafely [tarball (P.topDir cache) name version', unpacked (P.topDir cache) name version'])
        downloadCached (P.hackageServer (P.params cache)) (P.topDir cache) name version' >>= unpack (P.topDir cache)
        findSourceTree (unpacked (P.topDir cache) name version') >>= return . Hackage name (Just version')
+    where
+      versionString = case nub (sort (catMaybes (map (\ flag -> case flag of
+                                                                  P.CabalPin s -> Just s
+                                                                  {- _ -> Nothing -}) cabalFlags))) of
+                        [] -> Nothing
+                        [v] -> Just v
+                        vs -> error ("Conflicting cabal version numbers passed to Debianize: [" ++ intercalate ", " vs ++ "]")
