@@ -1,23 +1,43 @@
 module Debian.AutoBuilder.Types.PackageFlag
     ( PackageFlag(..)
+    , AptFlag(..)
+    , CabalFlag(..)
+    , DarcsFlag(..)
     , CabalVersion(..)
     , relaxInfo
     ) where
 
 import qualified Data.ByteString.Lazy as B
 
+data AptFlag
+    = AptPin String             -- ^ Specify the exact debian version of a package to retrieve via apt-get
+    deriving (Read, Show, Eq, Ord)
+
+data DarcsFlag
+    = DarcsTag String           -- ^ When doing a darcs get pass this string to darcs via the --tag flag.
+    deriving (Read, Show, Eq, Ord)
+
+data CabalFlag
+    = CabalPin String
+    deriving (Read, Show, Eq, Ord)
+
 data PackageFlag
     = RelaxDep String		-- ^ Build dependencies which should be ignored when deciding whether to rebuild
     | ExtraDep String		-- ^ Build dependencies which should be added to the debian/control file
-    | ExtraDevDep String	-- ^ Install dependencies which should be added to the Depends entry for the dev package in the debian/control file
-    | MapDep String String	-- ^ Tell cabal-debian to map the first argument (a name that appears in Extra-Libraries field of the cabal file) to the second argument (a debian binary package name.)
-    | DebVersion String         -- ^ The exact debian version number to insert into the changelog.  An exception will be thrown if the hackage version looks newer than this.
-    | Revision String           -- ^ Pass --revision <string> to cabal-debian so a suffix will be added to the cabal version to get the debian version.  By default this is -1~hackage1.  Debian policy says this should either be empty or begin with a dash.
+    | ExtraDevDep String	-- ^ Install dependencies which should be added to the Depends entry for the dev package in the
+                                -- debian/control file
+    | MapDep String String	-- ^ Tell cabal-debian to map the first argument (a name that appears in Extra-Libraries field of
+                                -- the cabal file) to the second argument (a debian binary package name.)
+    | DebVersion String         -- ^ The exact debian version number to insert into the changelog.  An exception will be thrown if
+                                -- the hackage version looks newer than this.
+    | Revision String           -- ^ Pass --revision <string> to cabal-debian so a suffix will be added to the cabal version to get
+                                -- the debian version.  By default this is -1~hackage1.  Debian policy says this should either be
+                                -- empty or begin with a dash.
     | Epoch String Int          -- ^ Set the epoch number in the version number of the given cabal package
     | Patch B.ByteString        -- ^ Apply the patch
     | Maintainer String         -- ^ Use the given string as maintainer name and email
     | OmitLTDeps                -- ^ Don't add the << part when converting cabal wildcard dependencies
-    | CabalVersion CabalVersion
+    | CabalVersion CabalVersion -- ^ Pin the the cabal version of the package to be retrieved from the hackage server.
     deriving (Show, Eq, Ord)
 
 data CabalVersion
